2006-03-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h
	(ipmi_calculate_rmcpplus_session_keys): Support both k_g and user
	password.

	* ipmipower/: Change -k option -m option.  Add new -k option to
	support global BMC key k_g.

2006-03-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-cipher-suite-spec.c
	(ipmi_cipher_suite_id_to_algorithms): Fix bug.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c (ipmi_calculate_sik,
	ipmi_calculate_rmcpplus_session_keys): Handle name only lookup
	flag in sik calculations.  Fix several corner cases and cleaned up
	code.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c (_calculate_k_rakp_hmac):
	Fix K calculation bug.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h: Fix
	spelling typo in IPMI_MAX_PASSWORD_LENGTH definition.  Define and
	use new IPMI_2_0_MAX_PASSWORD_LENGTH definition.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_construct_session_trlr_authentication_code),
	libfreeipmi/src/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_check_packet_session_authentication_code): Fix
	MD5_128 authentication code calculation bug.

	* ipmipower/: Support additional cipher algorithms.  Fix several
	bugs.

	* fish/: Fix various bmc-config bugs.

2006-03-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-debug.c
	(ipmi_dump_rmcpplus_packet): Output packet raw data if it cannot
	be unassembled.

	* ipmipower/, libfreeipmi/: Change open_session_rq to
	open_session_request and open_session_rs to open_session_response
	to match IPMI spec.

	* libfreeipmi/include/Makefile.am: Add forgotten header file.

	* libfreeipmi/src/ipmi-cipher-suite-spec.c,
	libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h,
	ipmipower/src/ipmipower_powercmd.c: Fix various "CIHPER" typos.

	* ipmipower/src/ipmipower_powercmd.c
	(_calculate_cipher_suite_ids): Fix parse bugs.

	* libfreeipmi/src/ipmi-rmcpplus.c,